--- a/vue-doc-test/index.html
+++ b/vue-doc-test/index.html
@@ -5,6 +5,7 @@
     <meta charset="UTF-8">
     <link href="https://cdn.bootcss.com/bootstrap/4.1.1/css/bootstrap.min.css" rel="stylesheet">
     <script src="https://cdn.bootcss.com/vue/2.5.16/vue.js"></script>
+    <script src="https://cdn.bootcss.com/axios/0.18.0/axios.min.js"></script>
     <title>Document</title>
 </head>
 
