--- a/TODO-list/index-v2.html
+++ b/TODO-list/index-v2.html
@@ -72,7 +72,7 @@
         `,
         methods: {
             onCompleted(id) {
-                this.$emit('click-conplete', id);
+                this.$emit('click-complete', id);
             }
         }
     });
