update news.html: ' '

--- a/SPA/news.html
+++ b/SPA/news.html
@@ -34,6 +34,56 @@
                         <span class="news-click">阅读量: 999</span>
                 </div>
             </li>
+            <li class="news-item">
+                <div class="item-inner">
+                        <img src="https://ws4.sinaimg.cn/large/006tNbRwgy1fufc7ag0ayj30gt09zgn9.jpg" alt="" class="news-img">
+                        <p class="news-title">
+                            厦门市高校最美女神
+                        </p>
+                        <span class="news-time">1小时</span>
+                        <span class="news-click">阅读量: 999</span>
+                </div>
+            </li>
+            <li class="news-item">
+                <div class="item-inner">
+                        <img src="https://ws4.sinaimg.cn/large/006tNbRwgy1fufc7ag0ayj30gt09zgn9.jpg" alt="" class="news-img">
+                        <p class="news-title">
+                            厦门市高校最美女神
+                        </p>
+                        <span class="news-time">1小时</span>
+                        <span class="news-click">阅读量: 999</span>
+                </div>
+            </li>
+            <li class="news-item">
+                <div class="item-inner">
+                        <img src="https://ws4.sinaimg.cn/large/006tNbRwgy1fufc7ag0ayj30gt09zgn9.jpg" alt="" class="news-img">
+                        <p class="news-title">
+                            厦门市高校最美女神
+                        </p>
+                        <span class="news-time">1小时</span>
+                        <span class="news-click">阅读量: 999</span>
+                </div>
+            </li>
+            <li class="news-item">
+                <div class="item-inner">
+                        <img src="https://ws4.sinaimg.cn/large/006tNbRwgy1fufc7ag0ayj30gt09zgn9.jpg" alt="" class="news-img">
+                        <p class="news-title">
+                            厦门市高校最美女神
+                        </p>
+                        <span class="news-time">1小时</span>
+                        <span class="news-click">阅读量: 999</span>
+                </div>
+            </li>
+            <li class="news-item">
+                <div class="item-inner">
+                        <img src="https://ws4.sinaimg.cn/large/006tNbRwgy1fufc7ag0ayj30gt09zgn9.jpg" alt="" class="news-img">
+                        <p class="news-title">
+                            厦门市高校最美女神
+                        </p>
+                        <span class="news-time">1小时</span>
+                        <span class="news-click">阅读量: 999</span>
+                </div>
+            </li>
         </ul>
     </div>  
 </body>
