--- a/SPA/sliding.html
+++ b/SPA/sliding.html
@@ -39,14 +39,12 @@
 </head>
 <body>
     <div class="navbar">
-        <p>#30 Days</p>
+        <p>#Sliding</p>
     </div>
     <div id="container">
-        <img src="https://ws1.sinaimg.cn/large/006tNbRwgy1fug4u027x9j31kw1l6qkt.jpg" alt="" title="#Me">
-        <img src="https://ws4.sinaimg.cn/large/006tNbRwgy1fug4vbff9fj31kw1kwhdv.jpg" alt="" title="#Me+">
-        <img src="https://ws1.sinaimg.cn/large/006tNbRwgy1fug4vy8yetj31kw1kwx6w.jpg" alt="" title="#I'd like some">
-        <img src="https://ws2.sinaimg.cn/large/006tNbRwgy1fug4wpwf49j31kw1kwx6w.jpg" alt="" title="#Pink">
-        <img src="https://ws2.sinaimg.cn/large/006tNbRwgy1fug4x63zyvj30u00u0h5q.jpg" alt="" title="#feet">
+        <img src="https://ws4.sinaimg.cn/large/006tNbRwgy1fufc7ag0ayj30gt09zgn9.jpg" alt="">
+        <img src="https://ws1.sinaimg.cn/large/006tKfTcgy1fsq54mpub4j31kw11xhdt.jpg" alt="">
+        <img src="https://ws3.sinaimg.cn/large/006tNbRwgy1fufc4ek9sij30kl0bzta2.jpg" alt="">
     </div>
 </body>
 </html>
